Update SimpleControllerObj .cls

--- a/SimpleControllerObj .cls
+++ b/SimpleControllerObj .cls
@@ -1,4 +1,4 @@
-**
+/**
 *@author LNazarenko
 * This class - custom Controller defines instances for output on the visual page
 */
@@ -14,19 +14,8 @@ public with sharing class SimpleControllerObj
    public List<Work_Period__c> wps{get;set;}
   
    /**
-   * Constructor of the class SimpleController, it creates instances of all classes
-   */
-   public SimpleControllerObj()
-   {
-     getCompany();
-     getOrder();
-     getWP(); 
-   }
-  
-   /**
    * Method creates Account's instances
    */
-   
    public List<Account> getCompany()
    {
      companies = [select Id, Name from Account];   
@@ -35,22 +24,13 @@ public with sharing class SimpleControllerObj
    }
  
    /**
-   * Method creates Order's instances
-   */
-   public List<Order__c> getOrder()
-   {
-     orders = [select Id, Name,Account__r.Id from Order__c where Account__r.Id IN:companies];  
-     System.Debug(orders); 
-     return orders;      
-   }
- 
-   /**
    * Method creates WorkPeriod's instances
    */
    public List<Work_Period__c> getWP()
    {
-     wps = [select Id, Name, Order__r.Id,Order__r.Account__r.Name, Rate__r.Id, Rate__r.Customer_Rate__c, Rate__r.Employer_Rate__c from Work_Period__c where Order__r.Id IN:orders]; 
+     wps = [Select Id, Name, Order__r.Id, Order__r.Account__r.Name, 
+           Rate__r.Id, Rate__r.Customer_Rate__c, Rate__r.Employer_Rate__c 
+           From Work_Period__c Where Order__r.Account__r.Id IN : companies Order by Name ASC]; 
      System.Debug(wps);
      return wps;
    }
-}
