--- a/ScheduleLaunch.cls
+++ b/ScheduleLaunch.cls
@@ -1,5 +1,5 @@
 unitHPBatch newBatch = new unitHPBatch();
-scheduledunitHPBatch newShed = new scheduledunitHPBatch();
+scheduledUnitHPBatch newShed = new scheduledUnitHPBatch();
 String timeGo = '59 59 23 * * ?';
 System.schedule('Increase life', timeGo, newShed);
 
