--- a/ScheduleLaunch.cls
+++ b/ScheduleLaunch.cls
@@ -1,3 +1,8 @@
+/**
+* Author  LNazarenko
+* this code launch batch scheduledUnitHPBatch
+*/
+
 unitHPBatch newBatch = new unitHPBatch();
 scheduledUnitHPBatch newShed = new scheduledUnitHPBatch();
 String timeGo = '59 59 23 * * ?';
