--- a/ScheduledUnitHPBatch.cls
+++ b/ScheduledUnitHPBatch.cls
@@ -1,3 +1,8 @@
+/**
+* Author  LNazarenko
+* this code launch batch unitHPBatch
+*/
+
 global class ScheduledUnitHPBatch implements Schedulable {
    global void execute(SchedulableContext sc) {
       unitHPBatch btch = new unitHPBatch(); 
